--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- header -->
 
- <!-- sec  memona-->
+    <!-- sec  memona-->
+    <div class="sec-1">
+      <div>
+        <h1 class="sec-1 pr-1">A Simple Bookmark <br />Manager</h1>
+
+        <h3 class="sec-1 pr-2">
+          A clean and simple interface to organize your favourite<br />
+          websites. Open a new browser tab and see your sites load
+          <br />instantly. Try it for free.
+        </h3>
+
+        <button class="sec-1 bu1 bu">Git on Chrome</button>
+        <button class="sec-1 bu2 bu">Get it on Firefox</button>
+      </div>
+
+      <div class="img-container">
+        <div class="background-shape"></div>
+        <!-- الشكل الأزرق المنحني -->
+        <img class="img-1" src="images/illustration-hero.svg" alt="logo" />
+      </div>
+    </div>
+    <!-- sec  safa -->
+
+    <!-- sec  memona-->
 
     <!-- sec  safa -->
- 
 
- <!-- sec  memona-->
-
-       <!-- sec  safa -->
-
-
-       <!--footer-->
-
-</body>
+    <!--footer-->
+  </body>
 </html>
