--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <h1 class="sec-1 pr-1">A Simple Bookmark <br />Manager</h1>
 
         <h3 class="sec-1 pr-2">
-          A clean and simple interface to organize your favourite<br />
-          websites. Open a new browser tab and see your sites load
-          <br />instantly. Try it for free.
+          A clean and simple interface to organize your favourite websites. Open
+          a new browser tab and see your sites load instantly. Try it for free.
         </h3>
 
         <button class="sec-1 bu1 bu">Git on Chrome</button>
@@ -37,7 +36,38 @@
     <!-- sec  safa -->
 
     <!-- sec  memona-->
+    <div class="sec-2">
+      <div class="sec-2 text">Download the extension</div>
 
+      <div class="sec-2 pr-2-1">
+        We’ve got more browsers in the pipeline. Please do let us know if <br/> you’ve
+        got a favourite you’d like us to prioritize.
+      </div>
+      <div class="sec-2 box-container">
+        <div class="sec-2 box-1 box">
+          <img src="images\logo-chrome.svg" ></img>
+        <p class="p11">Add to Chrome</p>
+        <p class="p12 p-color">Minimum version 62</p>
+        <img src=" images\bg-dots.svg" ></img>
+        <button class="sec-2 box-bu-1 box-bu">Add & Install Extension</button>
+      </div>
+        <div class="sec-2 box-2 box">
+          <img src="images\logo-firefox.svg" ></img>
+          <p class="p21">Add to Firefox</p>
+        <p class=" p22 p-color">Minimum version 55</p>
+        <img src=" images\bg-dots.svg" ></img>
+       
+        <button class="sec-2 box-bu-2 box-bu">Add & Install Extension</button>
+      </div>
+        <div class="sec-2 box-3 box">
+          <img src="images\logo-opera.svg" ></img>
+          <p class="p31">Add to Opera</p>
+        <p class="32 p-color">Minimum version 46</p>
+        <img src=" images\bg-dots.svg" ></img>
+        <button class="sec-2 box-bu-3 box-bu">Add & Install Extension</button>
+      </div>
+      </div>
+    </div>
     <!-- sec  safa -->
 
     <!--footer-->
