--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
  </head>
@@ -224,6 +226,32 @@ const menuIcon = document.getElementById('menu-icon');
         </div>
       </div>
        <!--footer-->
+
+<footer>
+  <div class="footer">
+   <p class="footer-p" > 35,000+ already joined</p>
+   <p class="footer-p2">Stay up-to-date with what we’re doing</p>
+   <div class="email-bu">
+   <div class="input info"><input type="email" placeholder="Enter your email address"> 
+   <i class="bx-email"></i></div>
+   <button class="bu-email mail">contact us</button>
+ </div>
+  </div>
+  <div class="footer2">
+
+    <div class="left">
+   <img src="images\Screenshot_22-2-2025_192639_127.0.0.1.jpeg" alt="logo" class="footer-logo">
+  <h4>Bookmark</h4> </div>
+  <div class="center">
+  <p>Features </p>
+     <p> Pricing</p> 
+   <p>  Contact </p></div>
+   <div class="right">
+   <img src="images\icon-facebook.svg" alt="logo" class="footer-icon">
+   <img src="images\icon-twitter.svg" alt="logo" class="footer-icon">
+  </div>
+   </div>
+ </footer>
 
 </body>
 </html>
