--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@ const menuIcon = document.getElementById('menu-icon');
               vitae neque eget nisl gravida pellentesque non ut velit.</p>
           </div>
         </div>
-        <button class="btr">More Info</button>
+       
       </div>
  
        <!--footer-->
-
+ <button class="btr7">More Info</button>
 <footer>
   <div class="footer">
    <p class="footer-p" > 35,000+ already joined</p>
